Tue Apr 17 16:54:39 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (safe_getter): should use INT2NUM().

Tue Apr 17 15:12:56 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big2long): 2**31 cannot fit in 31 bit long.

Sat Apr 14 22:46:43 2001  Guy Decoux  <decoux@moulon.inra.fr>

	* regex.c (calculate_must_string): wrong length calculation.

Sat Apr 14 13:33:32 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/config.status.in: no longer use missing/alloca.c.

	* win32/Makefile.sub: ditto.

Fri Apr 13 12:40:48 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (rb_thread_start_0): fixed memory leak.

Fri Apr 13 16:41:18 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (none): should clear cmdarg_stack too.

Fri Apr 13 06:19:29 2001  GOTOU YUUZOU  <gotoyuzo@notwork.org>

	* io.c (rb_fopen): use setvbuf() to avoid recursive malloc() on
	  some platforms.

Wed Apr 11 23:36:26 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_stat_dev): device functions should honor stat field
	  types (except long long such as dev_t).

Wed Apr 11 18:07:53 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (rb_mod_nesting): should not push nil for nesting array.

	* eval.c (rb_mod_s_constants): should not search array by
	  rb_mod_const_at() for nil (happens for singleton class).

Wed Apr 11 13:29:26 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_singleton_class_attached): should modify iv_tbl by
	  itself, no longer use rb_iv_set() to avoid freeze check error.

	* variable.c (rb_const_get): error message "uninitialized constant
	  Foo at Bar::Baz" instead of "uninitialized constantBar::Baz::Foo".

Tue Apr 10 02:24:40 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* io.c (opt_i_set): should strdup() inplace_edit string.

Mon Apr  9 23:29:54 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (exec_under): need to push cref too.

Mon Apr  9 12:05:44 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
